--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,7 @@ Week3/Assembly-CSharp.csproj
 /Week3/UserSettings
 Week3/Week2.sln
 Week3/Week3.sln
+/Week 4 - Quaternions/Temp
+/Week 4 - Quaternions/Library
+/Week 4 - Quaternions/Logs
+/Week 4 - Quaternions/UserSettings
