--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,7 @@ Week3/Week3.sln
 /Week 4 - Quaternions/Library
 /Week 4 - Quaternions/Logs
 /Week 4 - Quaternions/UserSettings
+/Week5/Library
+/Week5/Logs
+/Week5/Temp
+/Week5/UserSettings
