week 6 - wasd character controller with blend tree

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,9 @@ Week3/Week3.sln
 /Week5/Logs
 /Week5/Temp
 /Week5/UserSettings
+/Week6/.vs
+Week6/.vsconfig
+/Week6/Library
+/Week6/Logs
+/Week6/obj
+/Week6/UserSettings
