--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,11 @@ Week6/.vsconfig
 /Week6/Logs
 /Week6/obj
 /Week6/UserSettings
+/Week7/Library
+/Week7/Logs
+/Week7/Temp
+/Week7/.vs
+Week7/.vsconfig
+Week7/Assembly-CSharp.csproj
+Week7/Week7.sln
+/Week7/UserSettings
