Started on raytracer week 9

--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,7 @@ Week8/Assembly-CSharp.csproj
 /Week8/Logs
 /Week8/Temp
 /Week8/UserSettings
+/Week9/Library
+/Week9/Logs
+/Week9/Temp
+/Week9/UserSettings
